Fix sync menu jumping up

--- a/packages/insomnia-app/app/ui/css/components/sidebar.less
+++ b/packages/insomnia-app/app/ui/css/components/sidebar.less
@@ -197,7 +197,7 @@
     margin: @padding-sm 0;
 
     &--invisible {
-      display: none;
+      opacity: 0;
     }
   }
 
